# tozo

.github/workflows/: ci.yml
backend/: .gitignore  .pdm-python  pyproject.toml  setup.cfg
frontend/: package-lock.json  package.json
infrastructure/: .gitignore  ansible.cfg  github.tf
