[tool.black]  
target-version = ["py310"] 
[tool.isort]
profile = "black"

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "djhtml>=3.0.6",
    "mypy>=1.10.0",
    "flake8>=5.0.4",
    "bandit>=1.7.8",
    "vulture>=2.11",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.6",
]
[project]
name = "backend"
version = "0.1.0"
description = "backend project tozo"
authors = [
    {name = "Upendra", email = "upendragalla2324@gmail.com"},
]
dependencies = []
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
[tool.vulture]

min_confidence = 100

[tool.pytest.ini_options]
addopts = "--showlocals"
asyncio_mode = "auto"
pythonpath = ["src"]

[tool.pdm.scripts]
format-black = "black src/ tests/"
format-djhtml = "djhtml src/backend/templates -t 2 --in-place"
format-isort = "isort src tests"
format = {composite = ["format-black", "format-djhtml", "format-isort"]}
lint-bandit = "bandit -r src/"
lint-black = "black --check --diff src/ tests/"
lint-djhtml = "djhtml src/backend/templates -t 2 --check"
lint-flake8 = "flake8 src/ tests/"
lint-isort = "isort --check --diff src tests"
lint-mypy = "mypy src/backend tests"
lint-vulture = "vulture src"
lint = {composite = ["lint-bandit", "lint-black", "lint-djhtml", "lint-flake8", "lint-isort", "lint-mypy", "lint-vulture"]}
test = "pytest tests/"